--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,13 @@
     align-items: stretch;
 }
 
+.div-entry-col {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 2%;
+}
+
 .days-style {
     border: 1px solid black;
     width: calc(100%/7);
@@ -12,6 +19,10 @@
 
 .div-sm-pd {
     padding: 8px;
+}
+
+.div-sm-margin {
+    margin: 10px;
 }
 
 .thin-pd {
