--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     margin: 2%;
 }
 
